# SoftwareHM2

./: BrockageAccount.h  Stocks.h  log.h  main  main.cpp
Libraries/: Stocks.h  Time.h  money.h  status.h
UntitledProject2/: CMakeLists.txt  Screen01.ui.qml  UntitledProject2.qmlproject
UntitledProject2/imports/Constants/: Constants.qml
